--- a/ClearAsset/Info.plist
+++ b/ClearAsset/Info.plist
@@ -57,10 +57,10 @@
 	</array>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Nunito-Bold</string>
-		<string>Nunito-Regular</string>
-		<string>Nunito-BoldItalic</string>
-		<string>Nunito-Italic</string>
+		<string>Nunito-Bold.ttf</string>
+		<string>Nunito-Regular.ttf</string>
+		<string>Nunito-BoldItalic.ttf</string>
+		<string>Nunito-Italic.ttf</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
