--- a/ClearAsset/Info.plist
+++ b/ClearAsset/Info.plist
@@ -42,7 +42,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>TabBar</string>
+					<string>Splash</string>
 				</dict>
 			</array>
 		</dict>
